# marginfi-v2

programs/marginfi/: Cargo.toml
programs/marginfi/src/instructions/marginfi_account/: borrow.rs  deposit.rs  emissions.rs  liquidate.rs  repay.rs  withdraw.rs
programs/marginfi/src/instructions/marginfi_group/: add_pool.rs  collect_bank_fees.rs  configure_bank.rs  handle_bankruptcy.rs
programs/marginfi/src/state/: marginfi_account.rs  marginfi_group.rs
